--- a/Client/GroupItem.xaml
+++ b/Client/GroupItem.xaml
@@ -15,7 +15,13 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Border CornerRadius="10" Background="AliceBlue">
-                <Label Name="ItemWithName" Margin="5, 0, 0, 0" FontWeight="Bold"  Padding="0, -5, 0, -5" Foreground="#FF27245F" ></Label>
+                <Grid>
+                    <Label HorizontalAlignment="Left" Name="ItemWithName" Margin="5, 0, 0, 0" FontWeight="Bold"  Padding="0, -5, 0, -5" Foreground="#FF27245F" ></Label>
+                    <Border HorizontalAlignment="Right" Margin="1, 1, 10, 1" Background="#FFDE6E6E" Padding="5, 0, 4, 0" CornerRadius="10" >
+                        <Label FontWeight="Bold" Padding="0, -5, 0, -5" >X</Label>
+                    </Border>
+                </Grid>
+                
             </Border>
             <Label Grid.Row="1"  Name="ItemWithLastDo" FontSize="15" Margin="5, 0, 0, 0" VerticalAlignment="Center" FontWeight="Bold"  Padding="0, -5, 0, -5" Foreground="#FF27245F" ></Label>
         </Grid>
