--- a/Client/GroupItem.xaml
+++ b/Client/GroupItem.xaml
@@ -17,8 +17,10 @@
             <Border CornerRadius="10" Background="AliceBlue">
                 <Grid>
                     <Label HorizontalAlignment="Left" Name="ItemWithName" Margin="5, 0, 0, 0" FontWeight="Bold"  Padding="0, -5, 0, -5" Foreground="#FF27245F" ></Label>
-                    <Border HorizontalAlignment="Right" Margin="1, 1, 10, 1" Background="#FFDE6E6E" Padding="5, 0, 4, 0" CornerRadius="10" >
-                        <Label FontWeight="Bold" Padding="0, -5, 0, -5" >X</Label>
+                    <Border HorizontalAlignment="Right" Margin="1, 1, 10, 1" Background="#FFDE6E6E" Padding="5, 0, 4, 0" CornerRadius="10" Style="{DynamicResource exitStyle}" >
+                        <Button Click="ExitFromGroup" >
+                            <Label FontWeight="Bold" Padding="0, -5, 0, -5" >X</Label>
+                        </Button>
                     </Border>
                 </Grid>
                 
