FW: Add sessions

--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -5,13 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    
+        Title="MainWindow" Height="450" Width="800"
+        Closing="OnClising">
+        
     <Grid>
         <Frame Name="mainFrm" NavigationUIVisibility="Hidden">
-             
-        </Frame>
-        <Frame Name="showFrm" NavigationUIVisibility="Hidden">
 
         </Frame>
         <!--<Grid.RowDefinitions>
