--- a/Client/Pages/Login.xaml
+++ b/Client/Pages/Login.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Login">
     <Page.Resources>
-        <ResourceDictionary Source="MainRes.xaml" />
+        <ResourceDictionary Source="../MainRes.xaml" />
     </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
