--- a/Client/Pages/LoginedPage.xaml
+++ b/Client/Pages/LoginedPage.xaml
@@ -7,9 +7,10 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="LoginedPage"
+      
       Loaded="Page_Loaded">
     <Page.Resources>
-        <ResourceDictionary Source="MainRes.xaml" />
+        <ResourceDictionary Source="../MainRes.xaml" />
     </Page.Resources>
     <Grid Background="#FFB9D1EA" >
         <Grid.RowDefinitions>
