--- a/Client/Pages/Register.xaml
+++ b/Client/Pages/Register.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Register">
     <Page.Resources>
-        <ResourceDictionary Source="MainRes.xaml" />
+        <ResourceDictionary Source="../MainRes.xaml" />
     </Page.Resources>
     <Grid Background="LightGreen">
         <Grid.ColumnDefinitions>
