--- a/Client/Controls/GroupItem.xaml
+++ b/Client/Controls/GroupItem.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client"
-             mc:Ignorable="d" d:DesignWidth="223.064">
+             mc:Ignorable="d" d:DesignWidth="223.064"
+             MouseUp="OnClick">
     <Border Margin="5" CornerRadius="10" Height="50" Background="#FFB3D3F3" >
         <Border.Effect>
             <DropShadowEffect BlurRadius="20" Direction="-45" RenderingBias="Quality" ShadowDepth="3" Opacity="0.6"/>
