--- a/Client/Controls/GroupCreateItem.xaml
+++ b/Client/Controls/GroupCreateItem.xaml
@@ -5,13 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.Controls"
              mc:Ignorable="d" d:DesignWidth="265" >
-    <Border Margin="5" CornerRadius="10" Background="#FFB3D3F3" Height="Auto" >
+    <Border Margin="5" CornerRadius="10" Background="#FFB3D3F3" Height="Auto" VerticalAlignment="Stretch" >
         <Border.Effect>
             <DropShadowEffect BlurRadius="20" Direction="-45" RenderingBias="Quality" ShadowDepth="3" Opacity="0.6"/>
         </Border.Effect>
         <StackPanel Height="Auto">
             <Border CornerRadius="10" Background="AliceBlue" Margin="10">
                 <TextBox Name="groupName" Background="#00000000" BorderThickness="0" Margin="5" ></TextBox>
+            </Border>
+            <Border CornerRadius="5" Background="#FF7AB8F5" Margin=" 10" >
+                <StackPanel Name="users">
+                    <!--<local:CCheckBox Caption="Som" Selected="True" />-->
+                </StackPanel>
             </Border>
             <Grid>
                 <Grid.ColumnDefinitions>
