--- a/Client/MainRes.xaml
+++ b/Client/MainRes.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Client">
     <Style TargetType="{x:Type Button}">
-        <Style.Triggers>
+        <!--<Style.Triggers>
             <Trigger Property="IsPressed" Value="True">
                 
                 <Setter Property="RenderTransform">
@@ -11,7 +11,7 @@
                     </Setter.Value>
                 </Setter>
             </Trigger>
-        </Style.Triggers>
+        </Style.Triggers>-->
         <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
         <Setter Property="Template">
             <Setter.Value>
