--- a/Client/Pages/LoginedPage.xaml
+++ b/Client/Pages/LoginedPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="Client.LoginedPage"
+﻿<Page x:Class="Client.Pages.LoginedPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Client"
+      xmlns:local="clr-namespace:Client.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="LoginedPage"
@@ -17,7 +17,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200" />
+            <ColumnDefinition Width="250" />
             <ColumnDefinition/>
             <ColumnDefinition Width="0" Name="clmn"/>
         </Grid.ColumnDefinitions>
@@ -49,6 +49,10 @@
                 </Button>
             </Border>
         </Grid>
+
+        <Frame Grid.Column="1" Grid.Row="1" >
+        </Frame>
+        
         <ScrollViewer VerticalScrollBarVisibility="Auto" Background="#FF6EA5DE" Grid.Row="1" Grid.Column="2">
             <ScrollViewer.Effect>
                 <DropShadowEffect BlurRadius="30" Direction="0" RenderingBias="Quality" ShadowDepth="15" Opacity="0.6"/>
