--- a/Client/MainRes.xaml
+++ b/Client/MainRes.xaml
@@ -1,17 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Client">
+
     <Style TargetType="{x:Type Button}">
-        <!--<Style.Triggers>
-            <Trigger Property="IsPressed" Value="True">
-                
-                <Setter Property="RenderTransform">
-                    <Setter.Value>
-                        <ScaleTransform ScaleX="0.85" ScaleY="0.85"/>
-                    </Setter.Value>
-                </Setter>
-            </Trigger>
-        </Style.Triggers>-->
         <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -26,6 +17,43 @@
         <Setter Property="BorderThickness" Value="0"/>
     </Style>
 
+    <Style TargetType="{x:Type TextBox}" >
+        <Setter Property="SnapsToDevicePixels" Value="True"/>
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+        <Setter Property="AllowDrop" Value="true"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBoxBase}">
+                    <Border 
+          Name="Border"
+          CornerRadius="0" 
+          Padding="2"
+          BorderBrush="#888888"
+          BorderThickness="0" >
+                        <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Background" Value="#00000000"/>
+        
+    </Style>
+    
+    <Style x:Key="minBtn" TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}" >
+        
+        <Style.Triggers>
+            <Trigger Property="IsPressed" Value="True">
+
+                <Setter Property="RenderTransform">
+                    <Setter.Value>
+                        <ScaleTransform ScaleX="0.85" ScaleY="0.85"/>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    
     <Style x:Key="groupStyle" TargetType="{x:Type Border}">
         <Style.Triggers>
             <EventTrigger RoutedEvent="MouseEnter">
