--- a/Client/Pages/Login.xaml
+++ b/Client/Pages/Login.xaml
@@ -32,7 +32,7 @@
                         BorderThickness="2"
                         CornerRadius="5"
                         Background="#FFE8D580">
-                    <TextBox Margin="1" Name="txtLogin" FontSize="25" Background="#FFE8D580" FontWeight="Bold" Foreground="#FF050074" BorderThickness="0"/>
+                    <TextBox Margin="1" Name="txtLogin" FontSize="25" Background="#FFE8D580" FontWeight="Bold" Foreground="#FF050074"/>
                 </Border>
                 <Border Margin="10, 10, 10, 0" 
                         BorderBrush="Black" 
@@ -46,8 +46,8 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Button Margin="0, 0, 5, 0" Click="Button_Click" FontWeight="Bold" FontSize="25" Padding="10, 3, 10, 3" Background="#FFFF2E00" Foreground="White" >GO</Button>
-                    <Button Grid.Column="1" Margin="5, 0, 0, 0"  VerticalAlignment="Bottom" HorizontalAlignment="Stretch"  Click="Button_Register" FontWeight="Bold" FontSize="25" Background="#FF0074FF" Foreground="White">
+                    <Button Style="{StaticResource minBtn}" Margin="0, 0, 5, 0" Click="Button_Click" FontWeight="Bold" FontSize="25" Padding="10, 3, 10, 3" Background="#FFFF2E00" Foreground="White" >GO</Button>
+                    <Button Style="{StaticResource minBtn}" Grid.Column="1" Margin="5, 0, 0, 0"  VerticalAlignment="Bottom" HorizontalAlignment="Stretch"  Click="Button_Register" FontWeight="Bold" FontSize="25" Background="#FF0074FF" Foreground="White">
                         Register</Button>
                 </Grid>
                 
