--- a/Client/Controls/GroupWrite.xaml
+++ b/Client/Controls/GroupWrite.xaml
@@ -20,19 +20,21 @@
         <Border Name="plashkaLoading" Height="0" MinWidth="300" HorizontalAlignment="Center" Background="#FF363131" CornerRadius="0, 0, 100, 100" >
             <Image gif:ImageBehavior.AnimatedSource="..\Resoures\Images\Loading.gif" Width="50" Margin="10" />
         </Border>
-        <StackPanel Grid.Row="1" Name="msges">
-            
-        </StackPanel>
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Name="MsgScrolls" >
+            <StackPanel  Name="msges">
+                
+            </StackPanel>
+        </ScrollViewer>
+       
         <Grid Grid.Row="2" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.2*"/>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="0.2*"/>
             </Grid.ColumnDefinitions>
-            <Border  BorderThickness="0" Background="#FF234F7C"/>
-            <Border BorderThickness="0" Background="#FFB9D1EA" CornerRadius="0, 0, 1000, 0"/>
+            <Border  BorderThickness="0" Background="#FF234F7C" CornerRadius="1000, 0, 0, 0"/>
 
-            <Border BorderThickness="0" Grid.Column="1" Background="#FF234F7C" CornerRadius="5, 5, 0, 0">
+            <Border BorderThickness="0" Grid.Column="1" Background="#FF234F7C">
                 <Grid Margin="5" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -49,8 +51,7 @@
                 </Grid>
             </Border>
 
-            <Border  BorderThickness="0" Grid.Column="2" Background="#FF234F7C"/>
-            <Border  BorderThickness="0" Grid.Column="2" Background="#FFB9D1EA" CornerRadius="0, 0, 0, 1000"/>
+            <Border  BorderThickness="0" Grid.Column="2" Background="#FF234F7C" CornerRadius="0, 1000, 0, 0"/>
 
         </Grid>
        
