--- a/Client/Controls/GroupMessage.xaml
+++ b/Client/Controls/GroupMessage.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.Controls"
              mc:Ignorable="d" d:DesignWidth="251" d:DesignHeight="144">
-    <Grid HorizontalAlignment="Left" Margin="30,10,0,10" Width="195"  >
+    <Grid HorizontalAlignment="Left" Margin="30,10,10,10" >
         <Grid.Effect>
             <DropShadowEffect BlurRadius="20" Direction="-45" RenderingBias="Quality" ShadowDepth="3" Opacity="0.6"/>
         </Grid.Effect>
@@ -22,7 +22,7 @@
         <Border  Grid.Column="1" Background="Beige" CornerRadius="0, 1000, 0, 0 " ></Border>
         <Border Grid.Column="1" Grid.Row="1" Background="Beige" CornerRadius="0 , 0, 10, 0" >
             <Border  Background="#FFDEDEBF" Margin="5" >
-                <TextBlock  FontSize="14" Name="Teext" TextWrapping="WrapWithOverflow" Margin="5" ></TextBlock>
+                <TextBlock  FontSize="14" Name="Teext" TextWrapping="Wrap" Margin="5" ></TextBlock>
             </Border>
             
         </Border>
