--- a/Client/Controls/GroupWrite.xaml
+++ b/Client/Controls/GroupWrite.xaml
@@ -15,33 +15,95 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition/>
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Border Name="plashkaLoading" Height="0" MinWidth="300" HorizontalAlignment="Center" Background="#FF363131" CornerRadius="0, 0, 100, 100" >
-            <Image gif:ImageBehavior.AnimatedSource="..\Resoures\Images\Loading.gif" Width="50" Margin="10" />
+        <Border Name="plashkaLoading" Height="100" MinWidth="300" HorizontalAlignment="Center" Background="#FF363131" CornerRadius="0, 0, 100, 100" >
+            <Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Width="1"
+        Height="1"
+        >
+
+                <Canvas.RenderTransform>
+                    <TransformGroup>
+
+                        <RotateTransform x:Name="angle" Angle="0" CenterX="0.5" CenterY="0.5"/>
+
+                        <!-- Ideally remove the translation and scale from here
+                 and let the container apply them instead -->
+
+                        <TranslateTransform X="-0.5" Y="-0.5"/>
+                        <ScaleTransform ScaleX="100" ScaleY="100"/>
+
+                    </TransformGroup>
+                </Canvas.RenderTransform>
+
+                <Canvas.Triggers>
+                    <EventTrigger RoutedEvent="Canvas.Loaded">
+                        <BeginStoryboard>
+                            <Storyboard x:Name="rotation">
+                                <DoubleAnimation To="1" Duration="0:0:1"
+                                                    Storyboard.TargetName="content"
+                                                    Storyboard.TargetProperty="Opacity"/>
+                                <DoubleAnimation From="0" To="359" Duration="0:0:3" RepeatBehavior="Forever"
+                                                    Storyboard.TargetName="angle"
+                                                    Storyboard.TargetProperty="Angle"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Canvas.Triggers>
+
+                <Canvas Name="content" Opacity="0">
+
+                    <Path Width="1" Height="1" Stretch="Fill" Stroke="Green" StrokeThickness="0.1" StrokeStartLineCap="Round">
+                        <Path.Data>
+                            <PathGeometry>
+                                <PathFigure StartPoint="1,0">
+                                    <ArcSegment Point="0,-1" RotationAngle="90" SweepDirection="Clockwise" IsLargeArc="True" Size="1,1"/>
+                                </PathFigure>
+                            </PathGeometry>
+                        </Path.Data>
+                    </Path>
+
+                    <Path Canvas.Left="0.49" Canvas.Top="-0.05" Width="0.2" Height="0.2" Stretch="Fill" Fill="Green">
+                        <Path.Data>
+                            <PathGeometry>
+                                <PathFigure StartPoint="0,-1.1">
+                                    <LineSegment Point="0.1,-1" />
+                                    <LineSegment Point="0,-0.9" />
+                                </PathFigure>
+                            </PathGeometry>
+                        </Path.Data>
+                    </Path>
+
+                </Canvas>
+
+            </Canvas>
         </Border>
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Name="MsgScrolls" >
             <StackPanel  Name="msges">
-                
+                <Border Height="60"></Border>
             </StackPanel>
         </ScrollViewer>
-       
-        <Grid Grid.Row="2" >
+
+        <Grid Grid.Row="2" Margin="0, 0, 0, 10" VerticalAlignment="Bottom" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.2*"/>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="0.2*"/>
             </Grid.ColumnDefinitions>
-            <Border  BorderThickness="0" Background="#FF234F7C" CornerRadius="1000, 0, 0, 0"/>
+            <!--<Border  BorderThickness="0" Background="#FF234F7C" CornerRadius="1000, 0, 0, 0"/>-->
 
-            <Border BorderThickness="0" Grid.Column="1" Background="#FF234F7C">
+            <Border BorderThickness="0" Grid.Column="1" Background="#FF234F7C" CornerRadius="5">
+                <!--<Border.Effect>
+                    <DropShadowEffect  BlurRadius="20" Direction="-45" RenderingBias="Quality" ShadowDepth="3" Opacity="0.6"/>
+                </Border.Effect>-->
                 <Grid Margin="5" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
                     <Border Padding="5" Background="White" CornerRadius="5" >
-                        <TextBox FontSize="20" Background="#00000000" BorderThickness="0" Name="msg" ></TextBox>
+                        <TextBox FontSize="20" Background="#00000000" BorderThickness="0" Name="msg" KeyUp="Msg_KeyUp" ></TextBox>
                     </Border>
                     <Border  Grid.Column="1" Margin="10, 0, 0, 0"  Background="#FF6EA5DE"  CornerRadius="10" Style="{StaticResource groupStyle}">
                         <Button Click="SendMsg" Style="{StaticResource minBtn}" >
@@ -51,10 +113,10 @@
                 </Grid>
             </Border>
 
-            <Border  BorderThickness="0" Grid.Column="2" Background="#FF234F7C" CornerRadius="0, 1000, 0, 0"/>
+            <!--<Border  BorderThickness="0" Grid.Column="2" Background="#FF234F7C" CornerRadius="0, 1000, 0, 0"/>-->
 
         </Grid>
-       
+
         <!--<MediaElement Name="myGif" MediaEnded="myGif_MediaEnded" UnloadedBehavior="Manual"     Source="..\Resoures\Images\Loading.gif" LoadedBehavior="Play" Stretch="None"/>-->
     </Grid>
 </UserControl>
